style: fix video width on mobile

--- a/components/VideoPlayer/VideoPlayer.module.scss
+++ b/components/VideoPlayer/VideoPlayer.module.scss
@@ -32,3 +32,7 @@
   position: absolute;
   top: 50%;
 }
+
+.video {
+  width: 100%;
+}
